# padphin

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  xmake.lua
.xmake/linux/x86_64/: xmake.conf
.xmake/linux/x86_64/cache/: config  detect  history  package  references  toolchain
qml/: GamepadDemo.qml  Main.qml  Sidebar.qml  qml.qrc
resources/: Overview.html
resources/Generic/: generic_sheet_default.xml  generic_sheet_double.xml
resources/Generic/Fonts/: kenney_input_generic_map.txt
resources/PlayStation Series/: playstation-series_sheet_default.xml  playstation-series_sheet_double.xml
resources/PlayStation Series/Fonts/: kenney_input_playstation_series_map.txt
src/: FileGridWidget.cpp  FileGridWidget.h  FileOperations.cpp  FileOperations.h  GamepadLegend.cpp  GamepadLegend.h  MainWindow.cpp  MainWindow.h  QGamepad.cpp  QGamepad.h  QGamepadManager.cpp  QGamepadManager.h  SidebarWidget.cpp  SidebarWidget.h  main.cpp
